# regex-testing

./: Main.hs  README.md  regex-testing.cabal
