name:                regex-testing
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/testing#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable testing-exe
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N4
  build-depends:       base
                     , array
                     , regex-tdfa
                     , parallel
                     , regex-tdfa-text
                     , regex-pcre
                     , text-icu
                     , text
                     , bytestring
                     , thyme
                     , vector-space
                     , regex-base
                     , criterion
                     , deepseq
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/noughtmare/regex-testing
